There was no "all" target in the Makefile.

--- a/tuning/Makefile
+++ b/tuning/Makefile
@@ -1,7 +1,7 @@
 
 include		../Makefile.inc
 
-main: clean BeamFormer
+all: clean BeamFormer
  
 BeamFormer: BeamFormer.cpp
 	$(LINKER) -o $(PROJ_BASE)/bin/BeamFormerTuning BeamFormer.cpp $(UTILS_SRC) $(INCLUDES) $(LIBS) $(CFLAGS) $(LDFLAGS)
