Updated the Makefile.

--- a/Makefile.inc
+++ b/Makefile.inc
@@ -8,27 +8,16 @@ ISA_OPENCL_INCLUDE	:= $(HOME)/src/OpenCL/include
 # https://github.com/isazi/AstroData
 ISA_ASTRO_INCLUDE	:= $(HOME)/src/AstroData/include
 
-INCLUDES			:= -I"$(PROJ_BASE)/include" -I"$(OPENCL_INCLUDE)" -I"$(ISA_UTILS_INCLUDE)" -I"$(ISA_OPENCL_INCLUDE)" -I"$(ISA_ASTRO_INCLUDE)"
-CPU_INCLUDES		:= -I"$(PROJ_BASE)/include" -I"$(ISA_UTILS_INCLUDE)" -I"$(ISA_ASTRO_INCLUDE)"
-PHI_INCLUDES		:= -I"$(PROJ_BASE)/include" -I"$(ISA_UTILS_INCLUDE)" -I"$(ISA_ASTRO_INCLUDE)"
-LIBS				:= -L"$(OPENCL_LIB)"
+INCLUDES := -I"$(PROJ_BASE)/include" -I"$(OPENCL_INCLUDE)" -I"$(ISA_UTILS_INCLUDE)" -I"$(ISA_OPENCL_INCLUDE)" -I"$(ISA_ASTRO_INCLUDE)"
+LIBS := -L"$(OPENCL_LIB)"
 
 ifneq ($(debug), 1)
-	CFLAGS		:= -std=c++0x -O3 -g0 -Wall -fopenmp
-	CPU_CFLAGS	:= -std=c++0x -O3 -g0 -Wall -mavx -fopenmp
-	PHI_CFLAGS	:= -std=c++0x -O3 -g0 -Wall -mmic -openmp -vec-report3
+	CFLAGS := -std=c++0x -O3 -g0 -Wall -fopenmp
 else
-	CFLAGS		:= -std=c++0x -O0 -g3 -Wall -fopenmp
-	CPU_CFLAGS	:= -std=c++0x -O0 -g3 -Wall -mavx -fopenmp
-	PHI_CFLAGS	:= -std=c++0x -O0 -g3 -Wall -mmic -openmp -vec-report3
+	CFLAGS := -std=c++0x -O0 -g3 -Wall -fopenmp
 endif
 
-LDFLAGS         := -lm -lOpenCL
-CPU_LDFLAGS		:= -lm
-PHI_LDFLAGS		:= -lm
+LDFLAGS := -lm -lOpenCL
 
-CC			:= g++
-LINKER		:= g++
-INTELCXX	:= icc
+CC := icc
 
-UTILS_SRC	:= $(HOME)/src/utils/src/utils.cpp
