--- a/tuning/Makefile
+++ b/tuning/Makefile
@@ -4,7 +4,7 @@ include		../Makefile.inc
 all: clean BeamFormer
  
 BeamFormer: BeamFormer.cpp
-	$(LINKER) -o $(PROJ_BASE)/bin/BeamFormerTuning BeamFormer.cpp $(UTILS_SRC) $(INCLUDES) $(LIBS) $(CFLAGS) $(LDFLAGS)
+	$(CC) -o $(PROJ_BASE)/bin/BeamFormerTuning BeamFormer.cpp $(INCLUDES) $(LIBS) $(CFLAGS) $(LDFLAGS)
 
 clean:
 	rm -f $(PROJ_BASE)/bin/BeamFormerTuning
